# tint

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  w3c_basic.txt  w3c_extended.txt  xkcd.txt
tests/: sort.rs  table.rs
