[package]
name = "tint"
version = "1.0.2"
authors = ["Brian Savage <savage13@gmail.com>"]
description = "Color creation and manipulation"
repository = "https://github.com/savage13/tint"
readme = "README.md"
keywords = ["color", "colour", "rgb", "hsv"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
